[gd_scene load_steps=5 format=3 uid="uid://cb6irro5c8n6x"]

[ext_resource type="Script" uid="uid://5fkavlfd851u" path="res://scenes/ui/RadialMenu.gd" id="1_ltcld"]
[ext_resource type="Texture2D" uid="uid://cn85hdchtn33m" path="res://assets/sprites/ui/translate.png" id="1_rwrmv"]
[ext_resource type="Texture2D" uid="uid://b5q510fnnsmlo" path="res://assets/sprites/ui/rotate.png" id="2_hentg"]
[ext_resource type="Texture2D" uid="uid://b313tucquvpyi" path="res://assets/sprites/ui/scale.png" id="3_ir0ac"]

[node name="RadialMenu" type="Control"]
layout_mode = 3
anchor_left = -0.035
anchor_top = -0.062000003
anchor_right = 0.035
anchor_bottom = 0.062000003
offset_left = 40.32
offset_top = 40.176003
offset_right = 39.68
offset_bottom = 39.824005
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ltcld")

[node name="Background" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -40.0
offset_right = -39.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="TranslateButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -13.0
offset_top = -33.0
offset_right = 16.0
offset_bottom = -4.0
texture_normal = ExtResource("1_rwrmv")
texture_pressed = ExtResource("1_rwrmv")
texture_hover = ExtResource("1_rwrmv")
texture_disabled = ExtResource("1_rwrmv")
texture_focused = ExtResource("1_rwrmv")
ignore_texture_size = true
stretch_mode = 6

[node name="RotateButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 32.0
offset_bottom = 32.0
texture_normal = ExtResource("2_hentg")
texture_pressed = ExtResource("2_hentg")
texture_hover = ExtResource("2_hentg")
texture_disabled = ExtResource("2_hentg")
texture_focused = ExtResource("2_hentg")
ignore_texture_size = true
stretch_mode = 4

[node name="ScaleButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -30.0
offset_top = 3.0
offset_right = -1.0
offset_bottom = 32.0
texture_normal = ExtResource("3_ir0ac")
texture_pressed = ExtResource("3_ir0ac")
texture_hover = ExtResource("3_ir0ac")
texture_disabled = ExtResource("3_ir0ac")
texture_focused = ExtResource("3_ir0ac")
ignore_texture_size = true
stretch_mode = 4

[node name="ScaleInput" type="SpinBox" parent="."]
visible = false
layout_mode = 0
offset_left = -40.0
offset_top = -50.0
offset_right = 40.0
offset_bottom = -20.0
min_value = 0.25
max_value = 4.0
step = 0.25
value = 1.5
custom_minimum_size = Vector2(80, 30)
